breathe.css
*{
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  transition: hover 0.55s;
}

.bg-dark{
--bs-bg-opacity: 0.2;
}

.display-1{
text-shadow: 0px 0px 12px #fff;
}

.d-block {
object-fit: contain;
border-style: ridge;
border-radius: 10px;
border-color: white;
}


.nav-link:hover{
background-color: rgba(0, 0, 0, 0.7);
border-radius: 10px;
transition: 0.25s;
width: fit-content;
}

.display-2, .display-4{
  text-shadow: 0px 0px 12px #fff;
  text-align: center;
}

.card-header, .dropdown-item, .nav-link, .btn {
  text-shadow: 0px 0px 12px #fff;
}

.bi, .dropdown{
  text-shadow: 1px 1px 12px #000000;
}

.btn:hover{
  color: #fff;
  text-shadow: 1px 1px 12px #ffffff;
}

.dropdown-menu a:hover{
  background-color: rgba(0, 0, 0, 0.7);
}


.meme .carousel-item{
  max-width: 100%;

}

.imahe{
  width: 100px;
  height: 130px;
}

.meme3{
  color: #fff;
}
.meme2:hover{
  background-color: white;
  text-shadow: 0px 0px 11px #fff;
  border-radius: 10px;
  transition: 0.25s;
}

.meme5, .meme4{
  background-color: rgba(0, 0, 0, 0.8);
  border-radius: 10px
}

.meme5 a, .meme4 a{
  color: #fff;
}
.meme5 a:hover, .meme4 a:hover{
  background-color: rgba(255, 254, 254, 0.9);
  color: #000;
  border-radius: 20px;
  width: fit-content;
}

.meme6:hover{
  background-color: #000;
}

